--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-web": "^0.17.5",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "yup": "^0.32.11",
+    "react-native-pager-view": "5.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
